--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -19,6 +20,8 @@
     "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-modal": "^13.0.1",
+    "react-native-neat-date-picker": "^1.4.12",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
