--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "^14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
